refactor: stream process